# RLR

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
infrastructure-single-gpu/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infrastructure-single-gpu/scripts/: cloud-init.tftpl
rlr/: __init__.py
tests/: test_full_grpo_idea.ipynb
