[tool.poetry]
name = "rlr"
version = "0.1.0"
description = "A Reinforcement Learning framework for training language models on reasoning tasks"
authors = ["Erfan Miahi <mhi.erfan1@gmail.com>"]
readme = "README.md"
packages = [{include = "rlr"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
gymnasium = "^1.0.0"
wandb = "^0.19.3"
numpy = "^1.26.0"
tqdm = "^4.66.1"
transformers = "^4.48.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
trl = "^0.13.0"
tensordict = "^0.6.2"
safetensors = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-quotes = "^3.4.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
mypy = "^1.14.1"
flake8-annotations = "^3.0.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79 

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 